fix: change package name